2010-11-17  François Dumont  <francois.cppdevs@free.fr>

	* testsuite/lib/libstdc++.exp (check_v3_target_debug_mode): Clean
	built exe.

2010-11-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	PR libstdc++/45711
	* src/Makefile.am (stamp-debug): Also adjust VPATH.
	* src/Makefile.in: Regenerate.

2010-11-15  Jie Zhang  <jie@codesourcery.com>

	* testsuite/ext/profile/mh.cc: Add xfail for uclibc.

2010-11-14  Matthias Klose  <doko@ubuntu.com>

	* testsuite/28_regex/13_ecmascript: Remove, empty directory.
	* testsuite/28_regex/02_definitions: Likewise.
	* testsuite/29_atomics/headers/stdatomic.h: Likewise.

2010-11-14  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/bits/stl_tree.h (_Rb_tree<>::_M_const_cast_iter): Remove.
	(_Rb_tree_const_iterator<>::_M_const_cast): Add.
	(_Rb_tree<>::erase, _M_insert_unique_): Adjust.
	* include/debug/map.h (map<>::erase, insert): Fix C++0x signatures.
	* include/debug/multimap.h (multimap<>::erase, insert): Likewise.
	* include/debug/set.h (set<>::erase, insert): Fix, only cosmetic
	changes in this case.
	* include/debug/multiset.h (multiset<>::erase, insert): Likewise.
	* include/profile/set.h (set<>::insert): Remove redundant macro.
	* include/profile/multiset.h (multiset<>::insert): Likewise.
	* include/bits/stl_set.h (set<>::insert): Likewise.
	* include/bits/stl_multiset.h (multiset<>::insert): Likewise.

2010-11-12  Ian Lance Taylor  <iant@google.com>

	PR other/46332
	* testsuite/abi/demangle/abi_examples/14.cc (main): Change
	expected demangling.

2010-11-11  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/bits/move.h (forward): Implement N3143, resolving US 90.
	* testsuite/20_util/forward/a.cc: New.
	* testsuite/20_util/forward/b.cc: Likewise.
	* testsuite/20_util/forward/c_neg.cc: Likewise.
	* testsuite/20_util/forward/d.cc: Likewise.
	* testsuite/20_util/forward/e.cc: Likewise.
	* testsuite/20_util/forward/f_neg.cc: Likewise.

2010-11-10  François Dumont  <francois.cppdevs@free.fr>
